# wordle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  vcpkg.json
cmake/: CXXStandard.cmake  VcpkgHelpers.cmake  Workspace.cmake  WorkspaceEnvironment.cmake  WorkspaceHelpers.cmake  WorkspaceOptions.cmake  WorkspaceUtilities.cmake
data/: dictionary.json  wordle_wordlist.json
solver/: CMakeLists.txt
wordle/: CMakeLists.txt
wordle/include/: CMakeLists.txt
wordle/include/wordle/: CMakeLists.txt  dictionary.h  foundation.h  prelude.h  wordle.h
wordle/include/wordle/entities/: CMakeLists.txt  Dictionary.h  dictionary.h  entities.h  word.h
wordle/include/wordle/foundation/: CMakeLists.txt  ShareableObject.h  foundation.h  json.h  memory.h  mixins.h  string.h  types.h
wordle/include/wordle/foundation/concepts/: CMakeLists.txt  Shareable.h  Singleton.h  assignable.h  concepts.h  constructible.h  convertible.h  reflection.h  string.h
wordle/include/wordle/foundation/filesystem/: CMakeLists.txt  DirectoryContents.h  FileInfo.h  FileManager.h  FileProvider.h  filesystem.h  types.h
wordle/include/wordle/foundation/filesystem/providers/: CMakeLists.txt  FileProvider.h  providers.h  types.h
wordle/include/wordle/foundation/filesystem/providers/details/: CMakeLists.txt  FileProviderContext.h  PhysicalFileProviderContext.h
wordle/include/wordle/foundation/json/: CMakeLists.txt  JsonSerializer.h  deserialize.h  json-inl.h  json.h  types.h
wordle/include/wordle/foundation/json/concepts/: CMakeLists.txt  JsonDeserializable.h  JsonDeserializer.h  concepts.h
wordle/include/wordle/foundation/json/deserialization/: CMakeLists.txt  types.h
wordle/include/wordle/foundation/mixins/: Shareable.h  Singleton.h  concepts.h
wordle/include/wordle/managers/: dictionary_manager.h
wordle/include/wordle/prelude/: CMakeLists.txt  compile_features.h  exports_symbols.h  memory.h  prelude.h  string.h
wordle/include/wordle/prelude/memory/: ShareableObject.h
wordle/src/: CMakeLists.txt  dictionary.cc  prelude.h  wordle.cc  wordle.h
wordle/src/entities/: CMakeLists.txt  Dictionary.cc  DictionaryTests.cc  word.cc  word.h
wordle/src/foundation/: CMakeLists.txt
wordle/src/foundation/filesystem/: CMakeLIsts.txt  DirectoryContents.cc  FileManager.cc  FileManagerTests.cc  FileProvider.cc  FileProviderTests.cc
wordle/src/foundation/filesystem/providers/: CMakeLists.txt  FileProvider.cc
wordle/src/foundation/filesystem/providers/details/: CMakeLists.txt  PhysicalFileProviderContext.cc
wordle/src/foundation/json/: CMakeLists.txt  JsonSerializer.cc  JsonSerializerTest.cc  JsonTests.cc
wordle/src/foundation/json/fixtures/: DeserializableObject.h
wordle/src/managers/: CMakeLists.txt  dictionary_manager.cc  dictionary_manager.h
wordle/test/: CMakeLists.txt  DictionaryTests.cc  FileProviderTests.cc  JsonTests.cc  dictionary_tests.cc
wordle/test/entities/: CMakeLists.txt
wordle/test/filesystem/: CMakeLists.txt
wordle/test/filesystem/providers/: CMakeLists.txt  FileProviderTests.cc
wordle/test/fixtures/: DeserializableObject.h
wordle/test/json/: CMakeLists.txt
wordle/test/json/deserialization/: CMakeLists.txt  JsonDeserializationTests.cc
wordle/test/json/deserialization/fixtures/: DeserializableObject.cc  DeserializableObject.h
wordle/test/json/fixtures/: DeserializableObject.cc
wordle/tests/: CMakeLists.txt  smoke_test.cc
wordle_solver/: CMakeLists.txt  main.cc
